# modern-doc-processing-stack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.json  requirements.txt
examples/: usage.py  usage.ts
src/: document_processing.py  file_utils.py  logger.py  main.py  models.py
